# gaitest

./: CMakeLists.txt  README.md  package.xml  rviz_config.rviz
docs/: hardware.xlsx
launch/: convexhull.launch  from_bag.launch  from_camera.launch  getprism.launch  init_cam.launch  main.launch  main2.launch  normal_nodelets.launch  ptam_launch.launch  stereo.launch  stereo.launch~
src/: bag2csv.sh  est_imu.py  gaitest.py  gest.cpp  gest.m  gest2.cpp  gest3.cpp  importfile.m  importfile1.m  pcl_bind.py  pcl_example.cpp  pcl_visual.cpp  rigid_transform_3D.m  stitcher.py  test_pointcloud.py  test_pointcloud.py~  untitled.slx.autosave  visual.py~
src/slprj/_jitprj/: sezt6fhzhtQxgIac4xUElz.mat
src/slprj/_sfprj/EMLReport/: sezt6fhzhtQxgIac4xUElz.mat
src/slprj/_sfprj/groundContact/_self/sfun/info/: binfo.mat
src/slprj/_sfprj/precompile/: B8jIGooM2GLgpshokjbeyB.mat  dbinfo.mat
